<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!--<de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/profile_image"-->
        <!--android:layout_width="70dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginStart="24dp"-->
        <!--android:src="@drawable/profile"-->
        <!--app:border_color="#FF000000" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/ic_menu_account"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@android:color/white" />

</LinearLayout>

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="190dp"--><!--android:background="@drawable/background"--><!--android:orientation="vertical">-->


    <!--<TextView--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_above="@+id/email"--><!--android:layout_alignStart="@+id/profile_image"--><!--android:gravity="start"--><!--android:paddingBottom="4dp"--><!--android:textColor="#FFFFFF"--><!--android:textSize="14sp"--><!--android:textStyle="bold" />-->

    <!--<TextView--><!--android:id="@+id/email"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_alignStart="@id/username"--><!--android:layout_alignParentBottom="true"--><!--android:layout_marginBottom="8dp"--><!--android:gravity="start"--><!--android:textColor="#fff"--><!--android:textSize="14sp" />-->

    <!--</RelativeLayout>-->

